[gd_scene load_steps=26 format=3 uid="uid://dbr84qhe4y7bw"]

[ext_resource type="Script" path="res://src/Main.gd" id="1_cbhki"]
[ext_resource type="Script" path="res://src/tetris/TetrisGame.gd" id="2_vdhc1"]
[ext_resource type="Script" path="res://src/tetris/controllers/MoveController.gd" id="3_7ptju"]
[ext_resource type="Script" path="res://src/tetris/controllers/PieceController.gd" id="3_iymoh"]
[ext_resource type="Script" path="res://src/tetris/controllers/ScoreController.gd" id="4_fe7fy"]
[ext_resource type="Script" path="res://src/tetris/TetrisBoard.gd" id="4_v6qdr"]
[ext_resource type="Script" path="res://src/tetris/controllers/SpeedController.gd" id="5_j1j5r"]
[ext_resource type="TileSet" uid="uid://xpl7vkxi26eg" path="res://assets/tilesets/colors.tres" id="7_o68ho"]
[ext_resource type="FontFile" uid="uid://dob4us53t6ii3" path="res://assets/fonts/PressStart2P-vaV7/PressStart2P-vaV7.ttf" id="9_4yu66"]
[ext_resource type="Script" path="res://src/tetris/PiecePreview.gd" id="9_fpn5u"]
[ext_resource type="Script" path="res://src/tetris/NextPiecePreview.gd" id="9_hquj3"]
[ext_resource type="Script" path="res://src/SfxController.gd" id="9_orevo"]
[ext_resource type="AudioStream" uid="uid://bwu7tbry7ix6u" path="res://assets/audio/sfx/move.wav" id="10_qm2e4"]
[ext_resource type="LabelSettings" uid="uid://bw2ufba6q7bjs" path="res://assets/fonts/default_font_settings.tres" id="10_whv1p"]
[ext_resource type="AudioStream" uid="uid://dbpk3ekgwdmn7" path="res://assets/audio/sfx/rotate.wav" id="11_34b5p"]
[ext_resource type="AudioStream" uid="uid://26dqnkukrplm" path="res://assets/audio/sfx/drop.wav" id="12_jr873"]
[ext_resource type="Script" path="res://src/tetris/StatsPreview.gd" id="12_v0i7f"]
[ext_resource type="AudioStream" uid="uid://n45jcdkykj58" path="res://assets/audio/sfx/clear.wav" id="13_iivcx"]
[ext_resource type="Script" path="res://src/GameOverScreen.gd" id="13_q64jh"]
[ext_resource type="LabelSettings" uid="uid://fvfi1fianifd" path="res://assets/fonts/big_font_settings.tres" id="14_wj3f4"]
[ext_resource type="AudioStream" uid="uid://cno83gkupg2dm" path="res://assets/audio/music/lagos.wav" id="16_a2ddw"]
[ext_resource type="Script" path="res://src/MusicController.gd" id="16_t5oqm"]
[ext_resource type="AudioStream" uid="uid://7rd2onakh531" path="res://assets/audio/music/game_over.wav" id="18_ykk32"]
[ext_resource type="AudioStream" uid="uid://caxi2r3b2f4tr" path="res://assets/audio/music/venda.wav" id="23_m1kr4"]

[sub_resource type="Theme" id="Theme_ae7fq"]
default_font = ExtResource("9_4yu66")

[node name="Main" type="Node2D"]
script = ExtResource("1_cbhki")

[node name="Game" type="Node2D" parent="."]
script = ExtResource("2_vdhc1")

[node name="Move" type="Node" parent="Game"]
script = ExtResource("3_7ptju")

[node name="Score" type="Node" parent="Game"]
script = ExtResource("4_fe7fy")

[node name="Speed" type="Node" parent="Game"]
script = ExtResource("5_j1j5r")

[node name="Piece" type="Node" parent="Game"]
script = ExtResource("3_iymoh")

[node name="Board" type="TileMap" parent="Game"]
tile_set = ExtResource("7_o68ho")
format = 2
layer_0/name = "BACKGROUND"
layer_0/tile_data = PackedInt32Array(65537, 393216, 1, 131073, 393216, 1, 196609, 393216, 1, 262145, 393216, 1, 327681, 393216, 1, 393217, 393216, 1, 458753, 393216, 1, 524289, 393216, 1, 589825, 393216, 1, 655361, 393216, 1, 720897, 393216, 1, 786433, 393216, 1, 851969, 393216, 1, 917505, 393216, 1, 983041, 393216, 1, 1048577, 393216, 1, 1114113, 393216, 1, 1179649, 393216, 1, 65538, 393216, 1, 131074, 393216, 1, 196610, 393216, 1, 262146, 393216, 1, 327682, 393216, 1, 393218, 393216, 1, 458754, 393216, 1, 524290, 393216, 1, 589826, 393216, 1, 655362, 393216, 1, 720898, 393216, 1, 786434, 393216, 1, 851970, 393216, 1, 917506, 393216, 1, 983042, 393216, 1, 1048578, 393216, 1, 1114114, 393216, 1, 1179650, 393216, 1, 65539, 393216, 1, 131075, 393216, 1, 196611, 393216, 1, 262147, 393216, 1, 327683, 393216, 1, 393219, 393216, 1, 458755, 393216, 1, 524291, 393216, 1, 589827, 393216, 1, 655363, 393216, 1, 720899, 393216, 1, 786435, 393216, 1, 851971, 393216, 1, 917507, 393216, 1, 983043, 393216, 1, 1048579, 393216, 1, 1114115, 393216, 1, 1179651, 393216, 1, 65540, 393216, 1, 131076, 393216, 1, 196612, 393216, 1, 262148, 393216, 1, 327684, 393216, 1, 393220, 393216, 1, 458756, 393216, 1, 524292, 393216, 1, 589828, 393216, 1, 655364, 393216, 1, 720900, 393216, 1, 786436, 393216, 1, 851972, 393216, 1, 917508, 393216, 1, 983044, 393216, 1, 1048580, 393216, 1, 1114116, 393216, 1, 1179652, 393216, 1, 65541, 393216, 1, 131077, 393216, 1, 196613, 393216, 1, 262149, 393216, 1, 327685, 393216, 1, 393221, 393216, 1, 458757, 393216, 1, 524293, 393216, 1, 589829, 393216, 1, 655365, 393216, 1, 720901, 393216, 1, 786437, 393216, 1, 851973, 393216, 1, 917509, 393216, 1, 983045, 393216, 1, 1048581, 393216, 1, 1114117, 393216, 1, 1179653, 393216, 1, 65542, 393216, 1, 131078, 393216, 1, 196614, 393216, 1, 262150, 393216, 1, 327686, 393216, 1, 393222, 393216, 1, 458758, 393216, 1, 524294, 393216, 1, 589830, 393216, 1, 655366, 393216, 1, 720902, 393216, 1, 786438, 393216, 1, 851974, 393216, 1, 917510, 393216, 1, 983046, 393216, 1, 1048582, 393216, 1, 1114118, 393216, 1, 1179654, 393216, 1, 65543, 393216, 1, 131079, 393216, 1, 196615, 393216, 1, 262151, 393216, 1, 327687, 393216, 1, 393223, 393216, 1, 458759, 393216, 1, 524295, 393216, 1, 589831, 393216, 1, 655367, 393216, 1, 720903, 393216, 1, 786439, 393216, 1, 851975, 393216, 1, 917511, 393216, 1, 983047, 393216, 1, 1048583, 393216, 1, 1114119, 393216, 1, 1179655, 393216, 1, 65544, 393216, 1, 131080, 393216, 1, 196616, 393216, 1, 262152, 393216, 1, 327688, 393216, 1, 393224, 393216, 1, 458760, 393216, 1, 524296, 393216, 1, 589832, 393216, 1, 655368, 393216, 1, 720904, 393216, 1, 786440, 393216, 1, 851976, 393216, 1, 917512, 393216, 1, 983048, 393216, 1, 1048584, 393216, 1, 1114120, 393216, 1, 1179656, 393216, 1, 1245185, 393216, 1, 1245186, 393216, 1, 1245187, 393216, 1, 1245188, 393216, 1, 1245189, 393216, 1, 1245190, 393216, 1, 1245191, 393216, 1, 1245192, 393216, 1, 65545, 393216, 1, 131081, 393216, 1, 196617, 393216, 1, 262153, 393216, 1, 327689, 393216, 1, 393225, 393216, 1, 458761, 393216, 1, 524297, 393216, 1, 589833, 393216, 1, 655369, 393216, 1, 720905, 393216, 1, 786441, 393216, 1, 851977, 393216, 1, 917513, 393216, 1, 983049, 393216, 1, 1048585, 393216, 1, 1114121, 393216, 1, 1179657, 393216, 1, 1245193, 393216, 1, 1310721, 393216, 1, 1310722, 393216, 1, 1310723, 393216, 1, 1310724, 393216, 1, 1310725, 393216, 1, 1310726, 393216, 1, 1310727, 393216, 1, 1310728, 393216, 1, 1310729, 393216, 1, 65546, 393216, 1, 131082, 393216, 1, 196618, 393216, 1, 262154, 393216, 1, 327690, 393216, 1, 393226, 393216, 1, 458762, 393216, 1, 524298, 393216, 1, 589834, 393216, 1, 655370, 393216, 1, 720906, 393216, 1, 786442, 393216, 1, 851978, 393216, 1, 917514, 393216, 1, 983050, 393216, 1, 1048586, 393216, 1, 1114122, 393216, 1, 1179658, 393216, 1, 1245194, 393216, 1, 1310730, 393216, 1)
layer_1/name = "BORDER"
layer_1/tile_data = PackedInt32Array(0, 458752, 1, 1376256, 458752, 1, 1, 458752, 1, 1376257, 458752, 1, 2, 458752, 1, 1376258, 458752, 1, 3, 458752, 1, 1376259, 458752, 1, 4, 458752, 1, 1376260, 458752, 1, 5, 458752, 1, 1376261, 458752, 1, 6, 458752, 1, 1376262, 458752, 1, 7, 458752, 1, 1376263, 458752, 1, 8, 458752, 1, 1376264, 458752, 1, 9, 458752, 1, 1376265, 458752, 1, 10, 458752, 1, 1376266, 458752, 1, 11, 458752, 1, 1376267, 458752, 1, 65536, 458752, 1, 65547, 458752, 1, 131072, 458752, 1, 131083, 458752, 1, 196608, 458752, 1, 196619, 458752, 1, 262144, 458752, 1, 262155, 458752, 1, 327680, 458752, 1, 327691, 458752, 1, 393216, 458752, 1, 393227, 458752, 1, 458752, 458752, 1, 458763, 458752, 1, 524288, 458752, 1, 524299, 458752, 1, 589824, 458752, 1, 589835, 458752, 1, 655360, 458752, 1, 655371, 458752, 1, 720896, 458752, 1, 720907, 458752, 1, 786432, 458752, 1, 786443, 458752, 1, 851968, 458752, 1, 851979, 458752, 1, 917504, 458752, 1, 917515, 458752, 1, 983040, 458752, 1, 983051, 458752, 1, 1048576, 458752, 1, 1048587, 458752, 1, 1114112, 458752, 1, 1114123, 458752, 1, 1179648, 458752, 1, 1179659, 458752, 1, 1245184, 458752, 1, 1245195, 458752, 1, 1310720, 458752, 1, 1310731, 458752, 1)
layer_2/name = "LOCKED"
layer_2/tile_data = PackedInt32Array()
layer_3/name = "SHADOW"
layer_3/tile_data = PackedInt32Array()
layer_4/name = "PIECE"
layer_4/tile_data = PackedInt32Array()
script = ExtResource("4_v6qdr")

[node name="SfxController" type="Node" parent="Game"]
script = ExtResource("9_orevo")

[node name="MoveSfx" type="AudioStreamPlayer" parent="Game/SfxController"]
stream = ExtResource("10_qm2e4")
bus = &"SFX"

[node name="RotateSfx" type="AudioStreamPlayer" parent="Game/SfxController"]
stream = ExtResource("11_34b5p")
bus = &"SFX"

[node name="DropSfx" type="AudioStreamPlayer" parent="Game/SfxController"]
stream = ExtResource("12_jr873")
bus = &"SFX"

[node name="ClearSfx" type="AudioStreamPlayer" parent="Game/SfxController"]
stream = ExtResource("13_iivcx")
bus = &"SFX"

[node name="NextPiecePreview" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 439.0
offset_top = 232.0
offset_right = 479.0
offset_bottom = 272.0
script = ExtResource("9_hquj3")

[node name="NextPieceLabel" type="Label" parent="NextPiecePreview"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 23.0
text = "NEXT PIECE"
label_settings = ExtResource("10_whv1p")

[node name="Preview" type="TileMap" parent="NextPiecePreview"]
position = Vector2(23, 49)
tile_set = ExtResource("7_o68ho")
rendering_quadrant_size = 32
format = 2
layer_0/name = "PREVIEW"
script = ExtResource("9_fpn5u")

[node name="StatsPreview" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 410.0
offset_top = 18.0
offset_right = 450.0
offset_bottom = 58.0
script = ExtResource("12_v0i7f")

[node name="ScoreLabel" type="Label" parent="StatsPreview"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "SCORE"
label_settings = ExtResource("10_whv1p")

[node name="Score" type="Label" parent="StatsPreview"]
layout_mode = 0
offset_left = 96.0
offset_right = 136.0
offset_bottom = 23.0
text = "0"
label_settings = ExtResource("10_whv1p")

[node name="SpeedLabel" type="Label" parent="StatsPreview"]
layout_mode = 0
offset_top = 25.0
offset_right = 80.0
offset_bottom = 48.0
text = "SPEED"
label_settings = ExtResource("10_whv1p")

[node name="Speed" type="Label" parent="StatsPreview"]
layout_mode = 0
offset_left = 96.0
offset_top = 25.0
offset_right = 136.0
offset_bottom = 48.0
text = "0"
label_settings = ExtResource("10_whv1p")

[node name="PauseScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 55.0
offset_top = 251.0
offset_right = 95.0
offset_bottom = 291.0

[node name="PauseLabel" type="Label" parent="PauseScreen"]
layout_mode = 0
offset_left = 53.0
offset_right = 233.0
offset_bottom = 36.0
text = "PAUSE"
label_settings = ExtResource("14_wj3f4")

[node name="GameOverScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 55.0
offset_top = 251.0
offset_right = 95.0
offset_bottom = 291.0
script = ExtResource("13_q64jh")

[node name="GameOverLabel" type="Label" parent="GameOverScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "GameOver"
label_settings = ExtResource("14_wj3f4")

[node name="NewGameButton" type="Button" parent="GameOverScreen"]
custom_minimum_size = Vector2(240, 36)
layout_mode = 0
offset_left = 24.0
offset_top = 54.0
offset_right = 264.0
offset_bottom = 90.0
theme = SubResource("Theme_ae7fq")
text = "NEW GAME"

[node name="Music" type="Node" parent="."]
script = ExtResource("16_t5oqm")
music = Array[AudioStream]([ExtResource("16_a2ddw"), ExtResource("23_m1kr4")])
game_over = ExtResource("18_ykk32")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Music"]
bus = &"Music"
